# sharepoint_data_sync

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  deploy.sh  main.py  pyproject.toml
k8s/: cleanup-cronjob.yaml  configmap.yaml  cronjob.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
src/omd_sharepoint_data/: __init__.py  config.py  database.py  graph_request_ada.py  scheduler.py  sharepoint_client.py  sync_manager.py
