[project]
name = "omd-sharepoint-data"
version = "0.1.0"
description = "SharePoint file synchronization tool for China region"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "msgraph-sdk>=1.3.0",
    "azure-identity>=1.16.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver
    "pymysql>=1.1.0",  # MySQL driver (optional)
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "pathvalidate>=3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
